# gears-rust

./: .cf-studio-kit.toml  .codacy.yml  .gitignore  .kitsoki.yaml  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gears.toml  Makefile  README.md  RELEASE_POLICY.md  deny.toml  md-map.toml  pr1830_method_reference.xlsx
dylint_lints/de07_security/de0701_seaorm_no_unscoped_query/: Cargo.toml
dylint_lints/de07_security/de0701_seaorm_no_unscoped_query/src/: lib.rs
dylint_lints/de07_security/de0701_seaorm_no_unscoped_query/ui/: secure_patterns.rs  secure_without_scope.rs  secure_without_scope.stderr  unscoped_find_all.rs  unscoped_find_all.stderr  unscoped_find_count.rs  unscoped_find_count.stderr  unscoped_find_one.rs  unscoped_find_one.stderr  unscoped_update_delete.rs  unscoped_update_delete.stderr
dylint_lints/de07_security/de0702_seaorm_no_execute_unprepared/: Cargo.toml
dylint_lints/de07_security/de0702_seaorm_no_execute_unprepared/src/: lib.rs
dylint_lints/de07_security/de0702_seaorm_no_execute_unprepared/ui/: bad_execute_unprepared.rs  bad_execute_unprepared.stderr  bad_statement_from_string.rs  bad_statement_from_string.stderr  good_secure_queries.rs
examples/toolkit/api-contracts/api-contracts/: Cargo.toml
examples/toolkit/api-contracts/api-contracts-sdk/: Cargo.toml  build.rs  proto.lock.toml
examples/toolkit/api-contracts/api-contracts-sdk/examples/: gen_grpc_proto.rs
examples/toolkit/api-contracts/api-contracts-sdk/src/: contract.rs  error.rs  grpc.rs  lib.rs  models.rs  rest.rs
examples/toolkit/api-contracts/api-contracts/src/: config.rs  gear.rs  lib.rs  module.rs
examples/toolkit/api-contracts/api-contracts/tests/: grpc_integration.rs  integration.rs  mock_manual.rs  mock_mockall.rs  multi_provide.rs  resolving_directory.rs  runtime_eventual_readiness.rs
gears/chat-engine/chat-engine/: Cargo.toml  README.md
gears/chat-engine/chat-engine/src/: config.rs  module.rs
gears/chat-engine/chat-engine/src/domain/: context.rs  error.rs  export.rs  llm_config.rs  message.rs  mod.rs  ports.rs  reaction.rs  search.rs  session.rs  stream_delta.rs
gears/chat-engine/chat-engine/src/infra/: llm_gateway.rs  url_guard.rs  webhook_compat.rs
gears/chat-engine/chat-engine/tests/: e2e_test.rs  persistence_test.rs
gears/chat-engine/chat-engine/tests/common/: authz.rs  db.rs  mod.rs
gears/llm-gateway/llm-gateway-sdk/: Cargo.toml
gears/llm-gateway/llm-gateway-sdk/src/: api.rs  errors.rs  gts.rs  lib.rs  plugin_api.rs
gears/llm-gateway/llm-gateway-sdk/src/models/: content.rs  core.rs  extension.rs  items.rs  mod.rs  plugin.rs  role.rs  streaming.rs  tools.rs
gears/system/cluster/cluster/: Cargo.toml  README.md
gears/system/cluster/cluster/src/: config.rs  config_tests.rs  gear.rs  gear_tests.rs  lib.rs  provider.rs  wiring.rs  wiring_tests.rs
gears/system/cluster/cluster/tests/: conformance.rs
gears/system/cluster/plugins/postgres-cluster-plugin/: Cargo.toml  README.md
gears/system/event-broker/event-broker-sdk/: Cargo.toml  README.md
gears/system/event-broker/event-broker-sdk/src/: api.rs  api_tests.rs  error.rs  ids.rs  internal_test_helpers.rs  lib.rs  models.rs  typed_event.rs
gears/system/event-broker/event-broker-sdk/tests/: consumer.rs  contract.rs  integration_consumer.rs  integration_producer.rs  unit_chain_state.rs  unit_errors.rs  unit_offset_manager.rs  unit_producer_builder.rs  unit_typed_event.rs
gears/system/usage-collector/plugins/timescaledb-usage-collector-plugin/: Cargo.toml  README.md
libs/toolkit-contract/: Cargo.toml
libs/toolkit-contract-macros/: Cargo.toml
libs/toolkit-contract-macros-tests/: Cargo.toml
libs/toolkit-contract-macros-tests/tests/: ui.rs
libs/toolkit-contract-macros-tests/tests/ui/fail/: bad_suffix.rs  bad_suffix.stderr  consumes_missing_from.rs  consumes_missing_from.stderr  consumes_unknown_arg.rs  consumes_unknown_arg.stderr  embedded_with_rest_projection.rs  embedded_with_rest_projection.stderr  grpc_bad_supertrait.rs  grpc_bad_supertrait.stderr  (+20 more)
libs/toolkit-contract-macros/src/: codegen.rs  consumes.rs  contract_error.rs  grpc_contract.rs  grpc_contract_parse.rs  lib.rs  model.rs  parse.rs  projection.rs  proto_bridge.rs  provides.rs  rest_contract.rs  rest_contract_parse.rs  support.rs
libs/toolkit-contract-protogen/: Cargo.toml
libs/toolkit-contract-protogen/src/: lib.rs  lockfile.rs
libs/toolkit-contract-protogen/tests/: lockfile_stability.rs
libs/toolkit-contract/src/: contract.rs  descriptor.rs  error.rs  grpc_repr.rs  lib.rs  policy.rs  wiring.rs
libs/toolkit-contract/src/grpc/: mod.rs
libs/toolkit-contract/src/http/: dispatch.rs
libs/toolkit-contract/src/ir/: binding.rs  contract.rs  grpc.rs  mod.rs  validation.rs
libs/toolkit-contract/src/openapi/: axum_route.rs  generator.rs  mod.rs
libs/toolkit-contract/src/runtime/: canonical.rs  client.rs  config.rs  http.rs  mod.rs  resolving.rs  retry.rs  sse.rs  transport_error.rs
libs/toolkit-contract/tests/: contract_error_derive.rs  proto_bridge_derive.rs  rest_client_codegen.rs  rest_contract_macro.rs  wiring_config.rs
modules/file-storage/file-storage/: Cargo.toml  README.md
modules/file-storage/file-storage-sdk/: Cargo.toml  README.md
modules/file-storage/file-storage-sdk/src/: api.rs  errors.rs  lib.rs  models.rs  models_test.rs
modules/file-storage/file-storage/src/: config.rs  config_test.rs  errors.rs  lib.rs  module.rs
modules/file-storage/file-storage/tests/: e2e_smoke_test.rs  microchat_harness_layout_test.rs  microchat_lifecycle_test.rs  microchat_race_test.rs  microchat_validators_test.rs  repo_race_test.rs
modules/file-storage/microchat-test/: Cargo.toml
modules/file-storage/microchat-test/src/: entity.rs  error.rs  lib.rs  migration.rs  repo.rs  service.rs  validators.rs
modules/system/usage-collector/usage-collector/: Cargo.toml  README.md
modules/system/usage-collector/usage-collector-rest-client/: Cargo.toml  README.md
modules/system/usage-collector/usage-collector-sdk/: Cargo.toml  README.md
modules/system/usage-collector/usage-emitter/: Cargo.toml  README.md
(+2112 files in other folders)
