[package]
name = "cyberware-usage-collector-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SDK for usage-collector"
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberware-system"]
categories = ["development-tools"]

[lib]
name = "usage_collector_sdk"

[lints]
workspace = true

[dependencies]
# ModKit dependencies
modkit = { workspace = true }
modkit-canonical-errors = { workspace = true }
modkit-odata = { workspace = true, features = ["with-utoipa"] }
modkit-security = { workspace = true }

# AuthZ
authz-resolver-sdk = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Data structures
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
utoipa = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Stable hashing for raw-query cursor filter signature (shared contract
# between gateway and any storage plugin that mints `cursor.f`).
sha2 = { workspace = true }
hex = { workspace = true }

# GTS
gts = { workspace = true }
gts-macros = { workspace = true }

[dev-dependencies]
# Async runtime
tokio = { workspace = true }
